--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,47 +2,35 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [ main, tests_branch, develop ]
+    branches: [main]
   pull_request:
-    branches: [ main, tests_branch, develop ]
+    branches: [main]
 
 jobs:
-  lint:
-    name: Lint Code
+  build:
+    name: Build, Test & Coverage
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-      - name: Install flake8
-        run: pip install flake8
-      - name: Run flake8
-        run: flake8 image_recommender
+          cache: 'pip'
 
-  test:
-    name: Run Tests and Coverage
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8, 3.9, 3.10, 3.11]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install Dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install pytest pytest-cov
-      - name: Run pytest with coverage
-        run: pytest --cov=image_recommender --cov-report=term-missing --cov-report=xml
+
+      - name: Run tests with coverage
+        run: |
+          pytest --maxfail=1 --disable-warnings --cov=image_recommender --cov-report=term-missing --cov-report=xml
+
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v3
         with:
           files: coverage.xml
-          flags: unittests
-          fail_ci_if_error: true
