--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [main, tests_branch]
   pull_request:
-    branches: [main]
+    branches: [main, tests_branch]
 
 jobs:
   build:
