--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,33 +10,32 @@ jobs:
   build:
     name: Build, Test & Coverage
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ['3.10', '3.11']
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.11'
           cache: 'pip'
 
-      - name: Install build tools
+      - name: Install build essentials
         run: |
           python -m pip install --upgrade pip setuptools wheel
 
-      - name: Install dependencies
+      - name: Install project dependencies
         run: |
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install pytest pytest-cov
+          # Install CLIP from GitHub since PyPI "clip==1.0" isn't available
+          pip install git+https://github.com/openai/CLIP.git
 
       - name: Run tests with coverage
         run: |
-          pytest --maxfail=1 --disable-warnings --cov=image_recommender --cov-report=term-missing --cov-report=xml
+          pytest --maxfail=1 --disable-warnings --cov=image_recommender \
+                 --cov-report=term-missing --cov-report=xml
 
-      - name: Upload coverage to Codecov
+      - name: Upload coverage report
         uses: codecov/codecov-action@v3
         with:
           files: coverage.xml
