--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools wheel
 
-      - name: Install CLIP library
+      - name: Install CLIP library and testing tools
         run: |
           pip install git+https://github.com/openai/CLIP.git
+          pip install pytest pytest-cov
 
       - name: Install project dependencies
         run: |
